--- a/src/App.css
+++ b/src/App.css
@@ -18,3 +18,8 @@ nav a.active p{
     background-color: rgb(0 0 0 / 0.5);
     color: rgb(231, 240, 239);
 }  
+
+nav.dark a.active p{
+    background-color: rgba(255, 255, 255, 0.7);
+    color: rgb(0, 0, 0);
+}  
